--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="burger.ico" type="image/x-icon">
 </head>
 <body>
     
@@ -15,7 +16,7 @@
     <main>
         <div class="container">
             <ul id="recipe-list" class="recipe-list">
-                <li class="recipe-item">
+                <!-- <li class="recipe-item">
                     <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JpbGxlZCUyMG1lYXR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="recipe">
                      <h2>Recipe 1</h2>
                     <p>
@@ -48,7 +49,7 @@
                         Ingredient 1,
                     </p>
                     <a href="#">View Recipe</a>
-                </li>
+                </li> -->
             </ul>
             
         </div>
