--- a/index.html
+++ b/index.html
@@ -16,40 +16,7 @@
     <main>
         <div class="container">
             <ul id="recipe-list" class="recipe-list">
-                <!-- <li class="recipe-item">
-                    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JpbGxlZCUyMG1lYXR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="recipe">
-                     <h2>Recipe 1</h2>
-                    <p>
-                        <strong>Ingredients:</strong>
-                        Ingredient 1,
-                        Ingredient 1,
-                        Ingredient 1,
-                    </p>
-                    <a href="#">View Recipe</a>
-                </li>
-
-                <li class="recipe-item">
-                    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JpbGxlZCUyMG1lYXR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="recipe">
-                     <h2>Recipe 2</h2>
-                    <p>
-                        <strong>Ingredients:</strong>
-                        Ingredient 1,
-                        Ingredient 1,
-                        Ingredient 1,
-                    </p>
-                    <a href="#">View Recipe</a>
-                </li>
-                <li class="recipe-item">
-                    <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JpbGxlZCUyMG1lYXR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="recipe">
-                     <h2>Recipe 3</h2>
-                    <p>
-                        <strong>Ingredients:</strong>
-                        Ingredient 1,
-                        Ingredient 1,
-                        Ingredient 1,
-                    </p>
-                    <a href="#">View Recipe</a>
-                </li> -->
+            <!-- a list of recipes with an image, header, ingredients and a link to the recipe -->
             </ul>
             
         </div>
